3.2.0

- New Rank11 and Rank12 implementations with new space/speed tradeoffs.
  Taken from Simon Gog and Mathias Petri's paper.

- New ranking structure for MinimalPerfectHashFunction based on Rank11,
  which made it necessary to bump the serialVersionUID.

3.1.2

- Revised adapter (now renamed SignedFunctionStringMap) to accept
  generic Object2Long<? extends CharSequence> functions, discovering
  dynamically whether they implement Size64.
  
3.1.1

- New thin adapter SignedObject2LongFunctionStringMap to adapt the new
  Sux4J self-signing functions to the StringMap (big) interface. The
  adapter implements also a constructor based on an Iterable that
  can be used directly with MG4J's IndexBuilder.

- New bulk get() methods for EliasFanoLongBigList,
  EliasFanoMonotoneLongBigList and select() for SimpleSelect. They are
  built one upon each other and they are an order of magnitude faster than
  picking consecutive elements using getLong()/select().

3.1.0

- MinimalPerfectHashFunction, MWHCFunction,
  LcpMonotoneMinimalPerfectHashFunction,
  TwoStepsLcpMonotoneMinimalPerfectHashFunction and
  ZFastTrieDistributorMonotoneMinimalPerfectHashFunction have now built-in
  signing. The effort was relatively small, and the gain in speed is huge,
  as we can use part of the hash computed by the ChunkedHashStore as a
  signature.

- New "dictionary" option in MWHCFunction which stores the signature as a
  value. It gives the fastest and most compact probabilistic dictionary.

- Big switch to builders for MinimalPerfectHashFunction, MWHCFunction,
  TwoStepsMWHCFunction, LcpMonotoneMinimalPerfectHashFunction,
  TwoStepsLcpMonotoneMinimalPerfectHashFunction and
  ZFastTrieDistributorMonotoneMinimalPerfectHashFunction. As a final goal,
  all multiple constructors will be eliminated in favour of Guava-style static
  nested Builder classes.

- Major speed improvements in
  ZFastTrieDistributorMonotoneMinimalPerfectHashFunction.

3.0.11
